Fixed error with spinner

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </form>
           <!-- Spinning Loader -->
           <div class="loader">
-            <img src="assests/img/spinner.gif" alt="loader" class="spinner" />
+            <img src="assests/Img/spinner.gif" alt="loader" class="spinner" />
           </div>
           <!-- Show balance and calculate result -->
           <div class="balance">
