--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <input
                 type="number"
                 class="form-control amount"
-                placeholder="Enter amout to lock"
+                placeholder="Enter amount to lock"
               />
             </div>
             <div class="form-group">
@@ -112,7 +112,7 @@
           <!-- Show balance and calculate result -->
           <div class="balance">
             <p>Estimated Balance</p>
-            <h4>NGN <span class="results"></span></h4>
+            <h4>&#8358;<span class="results"></span></h4>
           </div>
         </div>
       </div>
