Disabled the interest input field

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 type="number"
                 class="form-control interest"
                 placeholder="Your Interest"
+                disabled
               />
             </div>
             <button class="submit btn btn-primary">Calculate Interest</button>
