added social and dowload option

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
         </div>
     </div>
 
+    <!-- Section for socials Media and Downloads -->
+
+    <div>
+        <button id="save" class="btn"></button>
+        <a id="social-link" href="" target="_blank">
+            <button id="target-social" class="btn btn-alt social">SHARE ON TWITTER</button>
+        </a>
+        <button id="target-download" class="btn btn-alt download">DOWNLOAD REPORT</button>
+    </div>
+
     <!-- Section 2 -->
     <div class="section-2 container">
         <h3>How does the calculator work</h3>
@@ -187,3 +197,10 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
